# py_project_example

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: Dockerfile
backend/web_app/: Makefile  main.py  pyproject.toml
backend/web_app/api/routes/: __init__.py  login.py  permission.py  role.py  student_class.py  teacher.py  teacher_post.py  user.py  user_role.py
backend/web_app/common/: authenticate.py  const.py
backend/web_app/configs/: setting.yaml
backend/web_app/core/: async_validator.py  exception.py  exception_handler.py  sqlmodel.py
backend/web_app/core/depend/: api.py  db.py
backend/web_app/core/depend/validator/: teacher_validator.py  user_validator.py
backend/web_app/core/middleware/: __init__.py
backend/web_app/core/oauth/: authenticate.py  oauth2.py
backend/web_app/core/schema/: response.py  user.py
backend/web_app/dependencies/: __init__.py  logger.py  mysql.py
backend/web_app/dependencies/config/: service_config.py
backend/web_app/model/: jwt_token.py  student.py  user.py
backend/web_app/model/mysql/: user.py
backend/web_app/script/: create_table.py  init_db.py
src/web_app/: main.py
src/web_app/api/routes/: __init__.py  user.py
src/web_app/configs/: setting.yaml
src/web_app/core/middleware/: process_middleware.py
src/web_app/core/schema/: response.py
src/web_app/dependencies/: logger.py  mysql.py
src/web_app/dependencies/config/: service_config.py
src/web_app/model/mysql/: user.py
