[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["darcy.chang <18279777936@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
inject = "^5.2.1"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
dynaconf = "^3.2.5"
orjson = "^3.10.3"
aiomysql = "^0.2.0"
sqlmodel = "^0.0.18"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
